--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Test Document</title>
+</head>
+<body>
+<h1>Hello World!</h1>
+</body>
+</html>
