Load main.js script

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Test Document</title>
+
+    <script src="main.js"></script>
+
 </head>
 <body>
 <h1>Hello World!</h1>
