--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
                     <td></td>
                     <td><input type="submit" value="Submit" onclick="return submitMe();"></td>
                 </tr>
+
+                <tr>
+                    <td></td>
+                </tr>
             </table>
         </form>
+        <table>
+            <tr>
+                <td> <div id="booklist"></div> </td>
+            </tr>
+        </table>
     </div>
 
     <div id="loginentry">
@@ -42,11 +51,11 @@
             <table style="width:300px">
                 <tr>
                     <td align="right" style="width:10%">Username:</td>
-                    <td><input type="text" name="usernane" id="login_username" style="width:100%"></td>
+                    <td><input type="text" id="login_username" style="width:100%"></td>
                 </tr>
                 <tr>
                     <td align="right" style="width:10%">Password:</td>
-                    <td><input type="password" name="password" id="login_password" style="width:100%"></td>
+                    <td><input type="password" id="login_password" style="width:100%"></td>
                 </tr>
                 <tr>
                     <td></td>
@@ -58,17 +67,14 @@
 
     <script>
         $(document).ready(function () {
-            var username = localStorage.timmanda_username;
-            var password = localStorage.timmanda_password;
-
-            if (!username || !password)
+            $("#bookentry").hide();
+            if (!localStorage.timmanda_username || !localStorage.timmanda_password)
             {
-                $("#bookentry").hide();
                 $("#loginbtn").click(function () {
                     localStorage.timmanda_username = $("#login_username").val();
                     localStorage.timmanda_password = $("#login_password").val();
 
-                    $("#bookentry").slideToggle('slow');
+                    $("#bookentry").slideToggle('slow', listbooks());
                     $("#loginentry").fadeOut('slow');
 
                     event.preventDefault();
@@ -76,9 +82,13 @@
             }
             else
             {
-                $("#loginentry").hide();
+                $("#bookentry").slideToggle('slow', listbooks());
+                $("#loginentry").fadeOut('slow');
             }
         });
+
+        $("#bookentry").on('show', function() {
+        })
     </script>
 </body>
 </html>
