--- a/index.html
+++ b/index.html
@@ -73,24 +73,22 @@
         $(document).ready(function () {
             $("#bookentry").hide();
 
+            $("#loginbtn").click(function () {
+                localStorage.timmanda_username = $("#login_username").val();
+                localStorage.timmanda_password = $("#login_password").val();
+
+                /*
+                 $("#bookentry").slideToggle('slow', listbooks());
+                 $("#loginentry").fadeOut('slow');*/
+
+                event.preventDefault();
+            });
+
             if (localStorage.timmanda_username && localStorage.timmanda_password)
             {
                 $("#bookentry").slideToggle('slow', listbooks());
                 $("#loginentry").fadeOut('slow');
             }
-
-            $("#loginbtn").click(function () {
-/*                localStorage.timmanda_username = $("#login_username").val();
-                localStorage.timmanda_password = $("#login_password").val();
-
-                $("#bookentry").slideToggle('slow', listbooks());
-                $("#loginentry").fadeOut('slow');*/
-
-                $("#loginentry").html("Hi Amanda");
-
-                event.preventDefault();
-            });
-
         });
     </script>
 </body>
