Almost there again

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <script>
         //The magic code to add show/hide custom event triggers
         (function ($) {
-            $.each(['show', 'hide'], function (i, ev) {
+            $.each(['pageshow', 'pagehide'], function (i, ev) {
                 var el = $.fn[ev];
                 $.fn[ev] = function () {
                     this.trigger(ev);
@@ -81,7 +81,7 @@
             });
         })(jQuery);
 
-        $("#bookentry").on('show', function() {
+        $("#bookentry").on('pageshow', function() {
             //alert("Hi");
             listbooks();
         });
